--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,18 @@ set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O3 -g -std=c++11 -Wall -Wno-depre
 set(LIB_SRC
     sylar/log.cpp
     sylar/util.cpp
-    )
+    sylar/config.cpp
+)
 
 add_library(sylar SHARED ${LIB_SRC})
 
-add_executable(test tests/test.cpp)
-add_dependencies(test sylar)
-target_link_libraries(test sylar)
+add_executable(test_log tests/test_log.cpp)
+add_dependencies(test_log sylar)
+target_link_libraries(test_log sylar)
+
+add_executable(test_config tests/test_config.cpp)
+add_dependencies(test_config sylar)
+target_link_libraries(test_config sylar)
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
