跟视频P11最后输出结果不一致，找到了问题所在，注释在了test_config.cpp第9行

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "g++ - 生成和调试活动文件",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/main",   //1
+            "program": "${workspaceFolder}/bin/test_config",   //1
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
