1.将复杂类型转换和简单类型转换分开了，新定义了一个类专门进行简单类型的转换； 2.容器偏特化，目前实现了vector的偏特化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,10 @@
         "ctime": "cpp",
         "ratio": "cpp",
         "thread": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "strstream": "cpp",
+        "set": "cpp",
+        "source_location": "cpp",
+        "valarray": "cpp"
     }
 }
