实现了自定义类型的转换、自定义类型嵌套map、vector类型的转换 实现自定义类型需要偏特化 我们实现是通过递归来实现的，所以无论嵌套多少层，都可以成功 实现了config解析自定义类型

--- a/bin/conf/log.yml
+++ b/bin/conf/log.yml
@@ -31,3 +31,42 @@ system:
         k: 130
         k2: 120
         k3: 110 
+
+class:
+    person:
+        name: sylar
+        age: 21
+        sex: true
+    map:
+        # 这样写转换会失败，这是数组形式了
+        # - name: sylar01
+        #   age: 21
+        #   sex: false
+        # - name: sylar02
+        #   age: 31
+        #   sex: true
+
+        # 写成map形式
+        sylar1:
+            name: sylar01
+            age: 21
+            sex: false
+        sylar2:
+            name: sylar02
+            age: 31
+            sex: true
+    vec_map:
+        k1:
+            - name: m1
+              age: 35
+              sex: false
+            - name: m2
+              age: 33
+              sex: true
+        k2:
+            - name: m21
+              age: 37
+              sex: false
+            - name: m22
+              age: 39
+              sex: true
