--- a/bin/conf/log_conf.yml
+++ b/bin/conf/log_conf.yml
@@ -12,4 +12,5 @@ logs:
       appenders:
           - type: FileLogAppender
             file: system.txt
+            formatter: '%d%T[%t]%T%m%n'
           - type: StdoutLogAppender
