--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "g++ - 生成和调试活动文件",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/test_config",   //1
+            "program": "${workspaceFolder}/bin/test_fiber",   //1
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
